--- a/Projekat/app/src/main/res/values/strings.xml
+++ b/Projekat/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="logOut">LOG OUT</string>
     <string name="Send">SEND</string>
     <string name="messageText">message text</string>
+    <string name="messageSent">message sent</string>
 </resources>
