deo drugog projekta

--- a/Projekat/app/src/main/res/values/strings.xml
+++ b/Projekat/app/src/main/res/values/strings.xml
@@ -19,4 +19,11 @@
     <string name="messageText">message text</string>
     <string name="messageSent">message sent</string>
     <string name="birthDate">Birth date:</string>
+
+
+    <string name="contact1">Josie Enyeart</string>
+    <string name="contact2">Mario Gartrell</string>
+    <string name="contact3">Rachel Kuester</string>
+    <string name="contact4">Stacia Gilmour</string>
+    <string name="contact5">Robbie Stam</string>
 </resources>
