--- a/Projekat/app/src/main/res/values/strings.xml
+++ b/Projekat/app/src/main/res/values/strings.xml
@@ -38,6 +38,6 @@
     <string name="message7">Fine, see you</string>
 
     <string name="existingUsername">Username already exist!</string>
-
+    <string name="usernameDosentExist">There is no such user! </string>
 
 </resources>
