Odradjena prva dva taska

--- a/Projekat/app/src/main/res/values/strings.xml
+++ b/Projekat/app/src/main/res/values/strings.xml
@@ -40,4 +40,6 @@
     <string name="existingUsername">Username already exist!</string>
     <string name="usernameDosentExist">There is no such user! </string>
 
+    <string name="userRegistration">User registered!</string>
+
 </resources>
